--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "api": "json-server -w data/db.json -p 4000",
     "dev": "next dev --turbopack",
+    "dev:all": "concurrently \"npm run api\" \"npm run dev\"",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
@@ -33,6 +35,7 @@
     "@types/react-dom": "^19",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "eslint-plugin-storybook": "^9.1.10",
