--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.545.0",
-    "next": "15.5.4",
+    "next": "^15.5.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "zod": "^4.3.5",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "eslint-config-next": "15.5.4",
     "eslint-plugin-storybook": "^9.1.10",
     "husky": "9.1.6",
+    "json-server": "^1.0.0-beta.3",
     "playwright": "^1.56.0",
     "storybook": "^9.1.10",
     "tailwindcss": "^4",
